--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,9 @@ html, body {
 
 .drawing-board-setup,
 .thickness-setup,
-.color-picker {
+.color-picker,
+.downloads,
+.preview {
   padding: 10px;
 }
 
@@ -109,4 +111,43 @@ html, body {
 
 .color-picker ul li a:hover {
   transform: scale(1.5);
+}
+
+.downloads .title,
+.preview .title {
+  font-weight: 600;
+  font-size: 1.125rem;
+  padding-bottom: 10px;
+}
+
+.download-btns {
+  padding: 10px;
+  border-radius: 5px;
+  border: 3px solid #fff;
+  outline: 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.download-btns:hover {
+  background-color: #fff;
+  border: 3px solid #dfdfdf;
+}
+
+.preview-content {
+  width: 100%;
+  height: 150px;
+  background-color: #000;
+  position: relative;
+}
+
+.preview-content img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 140px;
+  width: 140px;
+  image-rendering: pixelated;
 }
