--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin: 0;
 }
+
 html, body {
   height: 100%;
   box-sizing: border-box;
@@ -10,19 +11,34 @@ html, body {
   font-size: 16px;
   font-family: Consolas, "Liberation Mono", Menlo, Monaco, "Source Han Sans CN", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
 }
-.content {
+
+.app-content {
   position: relative;
   display: flex;
   height: 100%;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+}
+
+.misc-wrapper-center {
+  height: 100%;
+  overflow: auto;
+  margin: 20px;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .drawing-board-wrapper {
   max-width: 937px;
   max-height: 937px;
+  flex-shrink: 0;
 }
+
 .curr-grid-position {
-  color: #fff;
+  height: 20px;
+  line-height: 20px;
 }
 
 #drawing-board {
@@ -32,13 +48,21 @@ html, body {
   border: 0;
 }
 
-.misc-wrapper {
-  position: absolute;
+.misc-wrapper-left {
+  height: 100%;
+  width: 200px;
+  background-color: #fff;
+  flex-shrink: 0;
+  flex-basis: 200px;
+}
+
+.misc-wrapper-right {
   height: 100%;
   width: 260px;
   background-color: #fff;
-  right: 0;
-  top: 0;
+  flex-shrink: 0;
+  flex-basis: 260px;
+  overflow: auto;
 }
 
 .drawing-board-setup,
