--- a/src/scss/tools-bar.scss
+++ b/src/scss/tools-bar.scss
@@ -1,60 +1,4 @@
-/* pixel drawing board css */
-* {
-  padding: 0;
-  margin: 0;
-}
-
-html, body {
-  height: 100%;
-  box-sizing: border-box;
-  background-color: black;
-  font-size: 16px;
-  font-family: Consolas, "Liberation Mono", Menlo, Monaco, "Source Han Sans CN", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
-}
-
-.app-content {
-  position: relative;
-  display: flex;
-  height: 100%;
-  justify-content: space-between;
-  align-items: center;
-  overflow: hidden;
-}
-
-.misc-wrapper-center {
-  height: 100%;
-  overflow: auto;
-  margin: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.drawing-board-wrapper {
-  max-width: 937px;
-  max-height: 937px;
-  flex-shrink: 0;
-}
-
-.curr-grid-position {
-  height: 20px;
-  line-height: 20px;
-}
-
-#drawing-board {
-  width: 100%;
-  height: 100%;
-  image-rendering: pixelated;
-  border: 0;
-}
-
-.misc-wrapper-left {
-  height: 100%;
-  width: 200px;
-  background-color: #fff;
-  flex-shrink: 0;
-  flex-basis: 200px;
-}
+// tools-bar.scss 右侧工具栏样式
 
 .misc-wrapper-right {
   height: 100%;
@@ -63,21 +7,10 @@ html, body {
   flex-shrink: 0;
   flex-basis: 260px;
   overflow: auto;
+  .wrapper-right-item {
+    padding: 10px;
+  }
 }
-
-.drawing-board-setup,
-.thickness-setup,
-.color-picker,
-.downloads,
-.preview {
-  padding: 10px;
-}
-
-/* .drawing-board-setup .input-wrapper,
-.thickness-setup .input-wrapper,
-.color-picker .input-wrapper {
-  margin-bottom: 10px;
-} */
 
 .drawing-board-setup .input-wrapper:nth-last-child(1),
 .thickness-setup .input-wrapper:nth-last-child(1) {
@@ -122,6 +55,7 @@ html, body {
 .color-picker ul {
   font-size: 0;
 }
+
 .color-picker ul li {
   display: inline;
   list-style-type: none;
