--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
   .pixel-drawing-board-canvas {
     width: 100%;
     height: 100%;
