--- a/src/scss/tools-bar.scss
+++ b/src/scss/tools-bar.scss
@@ -7,6 +7,7 @@
   position: absolute;
   right: 0;
   top: 0;
+  overflow: auto;
   .pixel-drawing-tool-bar-items {
     padding: 10px;
     div {
@@ -16,6 +17,12 @@
         font-size: 1.125rem;
         display: inline-block;
         padding-bottom: 10px;
+        &.main-title {
+          color: #000000;
+        }
+        &.sub-title {
+          color: #3e3e3e;
+        }
       }
       input {
         display: inline-block;
@@ -40,6 +47,39 @@
       }
       .color-hover:hover {
         transform: scale(1.5);
+      }
+      img {
+        width: 100%;
+        image-rendering: pixelated;
+      }
+      select {
+        display: inline-block;
+        border: 3px solid #fff;
+        border-radius: 5px;
+        outline: 0;
+        box-sizing: border-box;
+        width: 100%;
+        height: 35px;
+        padding: 5px;
+        font-size: 1rem;
+        background-color: #eee;
+        transition: background-color 0.3s ease;
+      }
+      .download-btns, .box-shadow-btns {
+        padding: 5px;
+        border-radius: 5px;
+        font-size: 1rem;
+        height: 35px;
+        border: 3px solid #fff;
+        outline: 0;
+        box-sizing: border-box;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+
+      .download-btns:hover, .box-shadow-btns:hover {
+        background-color: #fff;
+        border: 3px solid #dfdfdf;
       }
     }
   }
